--- a/lib/src/Uncertainty/Algorithm/WeightedExperiments/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/WeightedExperiments/CMakeLists.txt
@@ -29,6 +29,7 @@ ot_add_source_file (GaussProductExperiment.cxx)
 ot_add_source_file (BootstrapExperiment.cxx)
 ot_add_source_file (MonteCarloExperiment.cxx)
 ot_add_source_file (ImportanceSamplingExperiment.cxx)
+ot_add_source_file (ExperimentIntegration.cxx)
 ot_add_source_file (LHSResult.cxx)
 ot_add_source_file (SimulatedAnnealingLHS.cxx)
 ot_add_source_file (MonteCarloLHS.cxx)
@@ -58,6 +59,7 @@ ot_install_header_file (GaussProductExperiment.hxx)
 ot_install_header_file (BootstrapExperiment.hxx)
 ot_install_header_file (MonteCarloExperiment.hxx)
 ot_install_header_file (ImportanceSamplingExperiment.hxx)
+ot_install_header_file (ExperimentIntegration.hxx)
 ot_install_header_file (LHSResult.hxx)
 ot_install_header_file (SimulatedAnnealingLHS.hxx)
 ot_install_header_file (MonteCarloLHS.hxx)
