--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -589,6 +589,7 @@ ot_check_test (MonteCarloLHS_std)
 ot_check_test (SimulatedAnnealingLHS_std)
 ot_check_test (GaussProductExperiment_std IGNOREOUT)
 ot_check_test (ImportanceSamplingExperiment_std)
+ot_check_test (ExperimentIntegration_std IGNOREOUT)
 ot_check_test (LHSExperiment_std)
 ot_check_test (LowDiscrepancyExperiment_std)
 ot_check_test (MonteCarloExperiment_std IGNOREOUT)
