--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -671,6 +671,7 @@ ot_pyinstallcheck_test (FixedExperiment_std)
 ot_pyinstallcheck_test (GaussProductExperiment_std)
 ot_pyinstallcheck_test (SmolyakExperiment_std IGNOREOUT)
 ot_pyinstallcheck_test (ImportanceSamplingExperiment_std)
+ot_pyinstallcheck_test (ExperimentIntegration_std IGNOREOUT)
 ot_pyinstallcheck_test (SpaceFilling_std)
 ot_pyinstallcheck_test (OptimalLHSExperiment_ishigami IGNOREOUT)
 ot_pyinstallcheck_test (OptimalLHSExperiment_std)
