--- a/lib/src/Base/Solver/CMakeLists.txt
+++ b/lib/src/Base/Solver/CMakeLists.txt
@@ -8,14 +8,14 @@ ot_add_source_file (SolverImplementation.cxx)
 ot_add_source_file (Bisection.cxx)
 ot_add_source_file (Secant.cxx)
 ot_add_source_file (Brent.cxx)
-ot_add_source_file (LsqSolver.cxx)
+ot_add_source_file (LeastSquaresEquationsSolver.cxx)
 ot_add_source_file (ODESolver.cxx)
 ot_add_source_file (ODESolverImplementation.cxx)
 ot_add_source_file (RungeKutta.cxx)
 ot_add_source_file (Fehlberg.cxx)
 
 ot_install_header_file (Brent.hxx)
-ot_install_header_file (LsqSolver.hxx)
+ot_install_header_file (LeastSquaresEquationsSolver.hxx)
 ot_install_header_file (Bisection.hxx)
 ot_install_header_file (Secant.hxx)
 ot_install_header_file (SolverImplementation.hxx)
