--- a/python/src/LeastSquaresEquationsSolver_doc.i.in
+++ b/python/src/LeastSquaresEquationsSolver_doc.i.in
@@ -1,5 +1,5 @@
-%feature("docstring") OT::LsqSolver
-"Least Square Solver (LsqSolver) for a system of non-linear equations.
+%feature("docstring") OT::LeastSquaresEquationsSolver
+"Least Square Solver (LeastSquaresEquationsSolver) for a system of non-linear equations.
 
 
 Parameters
@@ -22,11 +22,11 @@ openturns.Solver, openturns.OptimizationAlgorithm
 
 Notes
 -----
-LsqSolver might fail and not obtain a result lower than the specified threshold, in this case an error is thrown."
+LeastSquaresEquationsSolver might fail and not obtain a result lower than the specified threshold, in this case an error is thrown."
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::LsqSolver::solve
+%feature("docstring") OT::LeastSquaresEquationsSolver::solve
 "Solve a system of non-linear equations.
 
 
@@ -44,4 +44,4 @@ result : :class:`~openturns.Point`
 
 Notes
 -----
-LsqSolver might fail and not obtain a result lower than the specified threshold, in this case an error is thrown."
+LeastSquaresEquationsSolver might fail and not obtain a result lower than the specified threshold, in this case an error is thrown."
