--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1036,7 +1036,7 @@ ot_add_python_module(experimental experimental_module.i
                      GeneralizedParetoValidation.i GeneralizedParetoValidation_doc.i.in
                      BoundaryMesher.i BoundaryMesher_doc.i.in
                      SimplicialCubature.i SimplicialCubature_doc.i.in
-                     RankSobolSensitivityAlgorithm.i RankSobolSensitivityAlgorithm_doc.i.in)
+                     RankSobolSensitivityAlgorithm.i RankSobolSensitivityAlgorithm_doc.i.in
                      CubaIntegration.i CubaIntegration_doc.i.in
                     )
 set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for the docstring test
