--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -237,8 +237,8 @@ ot_pyinstallcheck_test (NonStationaryCovarianceModelFactory_std)
 ot_pyinstallcheck_test (ProductCovarianceModel_std)
 ot_pyinstallcheck_test (StationaryFunctionalCovarianceModel_std IGNOREOUT)
 ot_pyinstallcheck_test (LatentVariableModel_std IGNOREOUT)
-ot_pyinstallcheck_test (t_ProcessSample_operators IGNOREOUT)
-ot_pyinstallcheck_test (t_Field_operators IGNOREOUT)
+ot_pyinstallcheck_test (ProcessSample_operators IGNOREOUT)
+ot_pyinstallcheck_test (Field_operators IGNOREOUT)
 
 if (HMAT_FOUND)
 ot_pyinstallcheck_test (HMatrix_std)
