--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,24 +6,20 @@ jobs:
   macos:
     runs-on: macos-latest
     env:
-      LDFLAGS: -L/usr/local/opt/openblas/lib
-      CPPFLAGS: -I/usr/local/opt/openblas/include
+      LDFLAGS: -L/opt/homebrew/opt/openblas/lib
+      CPPFLAGS: -I/opt/homebrew/opt/openblas/include
     steps:
     - uses: actions/checkout@v4
     - run: |
         brew install openblas swig boost python3 tbb nlopt cminpack ceres-solver bison flex hdf5 ipopt primesieve spectra pagmo
-        pip3 install matplotlib scipy chaospy pandas dill
-    - run: |
-        cd $HOME/work/openturns
-        git clone -b 1.9.0 https://github.com/jeromerobert/hmat-oss.git hmat-oss
-        cd hmat-oss/
-        cmake -DBUILD_EXAMPLES=OFF -DCBLAS_INCLUDE_DIR=/usr/local/opt/openblas/include -DCMAKE_MACOSX_RPATH=ON .
-        make install -j3
+        pip3 install matplotlib scipy chaospy pandas dill --break-system-packages
     - run: |
         cmake \
-        -DPython_EXECUTABLE=/usr/local/bin/python3 \
-        -DFLEX_EXECUTABLE=/usr/local/opt/flex/bin/flex \
-        -DBISON_EXECUTABLE=/usr/local/opt/bison/bin/bison \
+        -DCMAKE_INSTALL_PREFIX=~/.local \
+        -DPython_EXECUTABLE=/opt/homebrew/bin/python3 \
+        -DUSE_BISON=OFF \
+        -DFLEX_EXECUTABLE=/opt/homebrew/opt/flex/bin/flex \
+        -DBISON_EXECUTABLE=/opt/homebrew/opt/bison/bin/bison \
         -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror" \
         -DCMAKE_SWIG_FLAGS="-Werror" -DSWIG_COMPILE_FLAGS="-O1 -Wno-unused-parameter -Wno-unused-function -Wno-deprecated-declarations" \
         -DCMAKE_UNITY_BUILD=ON -DCMAKE_UNITY_BUILD_BATCH_SIZE=32 .
