--- a/python/src/LinearModelAlgorithm_doc.i.in
+++ b/python/src/LinearModelAlgorithm_doc.i.in
@@ -88,13 +88,15 @@ In this case, the Cholesky method may fail to produce accurate results.
 Examples
 --------
 >>> import openturns as ot
->>> distribution = ot.Normal()
->>> func = ot.SymbolicFunction(['x1','x2', 'x3'], ['x1 + x2 + sin(x2 * 2 * pi_)/5 + 1e-3 * x3^2'])
+>>> func = ot.SymbolicFunction(
+...     ['x1', 'x2', 'x3'],
+...     ['x1 + x2 + sin(x2 * 2 * pi_)/5 + 1e-3 * x3^2']
+... )
 >>> dimension = 3
->>> distribution = ot.JointDistribution([ot.Normal()]*dimension)
->>> input_sample = distribution.getSample(20)
->>> output_sample = func(input_sample)
->>> algo = ot.LinearModelAlgorithm(input_sample, output_sample)
+>>> distribution = ot.JointDistribution([ot.Normal()] * dimension)
+>>> inputSample = distribution.getSample(20)
+>>> outputSample = func(inputSample)
+>>> algo = ot.LinearModelAlgorithm(inputSample, outputSample)
 >>> algo.run()
 >>> result = algo.getResult()"
 
