--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,14 +37,14 @@ jobs:
       - name: Install
         shell: cmd
         run: |
-          conda install -y cmake swig ninja winflexbison "libblas=*=*netlib" "liblapack=*=*netlib" "liblapacke=*=*netlib" mpc boost-cpp libxml2 hdf5 primesieve tbb-devel hmat-oss cminpack ceres-solver nlopt dlib-cpp ipopt pagmo-devel spectralib zlib scipy pandas matplotlib-base dill
+          conda install -y cmake swig ninja winflexbison "libblas=*=*netlib" "liblapack=*=*netlib" "liblapacke=*=*netlib" mpc boost-cpp libxml2 hdf5 primesieve tbb-devel cminpack ceres-solver nlopt dlib-cpp ipopt pagmo-devel spectralib zlib scipy pandas matplotlib-base dill
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
         shell: cmd
         run: |
           set "LIB=C:\Users\runneradmin\miniconda3\Library\lib;%LIB%"
           set "INCLUDE=C:\Users\runneradmin\miniconda3\Library\include;%INCLUDE%"
-          cmake -G Ninja -B . -LAH -DCMAKE_INSTALL_PREFIX="C:/Users/runneradmin/miniconda3/Library" -DLAPACK_LIBRARIES="C:/Users/runneradmin/miniconda3/Library/lib/lapack.lib" -DCMAKE_UNITY_BUILD=ON -DCMAKE_UNITY_BUILD_BATCH_SIZE=16 -DCMAKE_PREFIX_PATH="C:/Users/runneradmin/miniconda3/Library" -DPython_FIND_STRATEGY=LOCATION -DPython_ROOT_DIR="C:/Users/runneradmin/miniconda3" || exit 1
+          cmake -G Ninja -B . -LAH -DCMAKE_INSTALL_PREFIX="C:/Users/runneradmin/miniconda3/Library" -DLAPACK_LIBRARIES="C:/Users/runneradmin/miniconda3/Library/lib/lapack.lib;C:/Users/runneradmin/miniconda3/Library/lib/blas.lib" -DCMAKE_UNITY_BUILD=ON -DCMAKE_UNITY_BUILD_BATCH_SIZE=16 -DCMAKE_PREFIX_PATH="C:/Users/runneradmin/miniconda3/Library" -DPython_FIND_STRATEGY=LOCATION -DPython_ROOT_DIR="C:/Users/runneradmin/miniconda3" || exit 1
           cmake --build . --target install --parallel 2 || exit 1
           ctest --output-on-failure --timeout 100 -E cppcheck -j2 --repeat after-timeout:2 --schedule-random
 
