--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -483,7 +483,9 @@ ot_check_test (GumbelCopula_std)
 ot_check_test (GumbelCopulaFactory_std)
 ot_check_test (OrdinalSumCopula_std)
 ot_check_test (DistFunc_beta)
-ot_check_test (DistFunc_binomial IGNOREOUT)
+if (BISON_FOUND AND FLEX_FOUND)
+  ot_check_test (DistFunc_binomial IGNOREOUT)
+endif ()
 if (NOT PROJECT_BINARY_DIR STREQUAL PROJECT_SOURCE_DIR)
   execute_process (COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/t_DistFunc_binomial1.csv ${CMAKE_CURRENT_BINARY_DIR})
   execute_process (COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/t_DistFunc_binomial2.csv ${CMAKE_CURRENT_BINARY_DIR})
